welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:34: error: not found: value T
  for (c <- 0 to T.length-2) {
                 ^Array2:35: error: not found: value T
    	setCouleurBrosse(T(c+n+1))
                         ^